src/styles/style.css
:root {
	--white: #fff;
	--white-op: #d7ccc0;
	--bright: #f5f4f0;
	--orange: #fe8a02;
	--main-dark: #42413c;
	--dark: #2a2626;
	--dark-op: #908d8b;
	--brown: #b09a81;
	--blue: #1085c5;
}

@font-face {
	font-family: Neucha;
	src: url("../assets/fonts/Neucha/Neucha-Regular.ttf");
}

@font-face {
	font-weight: 400;
	font-family: OpenSans;
	src: url("../assets/fonts/OpenSans/OpenSans-Regular.ttf");
}

@font-face {
	font-weight: 700;
	font-family: OpenSans;
	src: url("../assets/fonts/OpenSans/OpenSans-Bold.ttf");
}

body {
	margin: 0;
	padding: 0;
	font: 16px/1.6 OpenSans, sans-serif;
	color: #2A2626;
}

h1,
h2,
h3,
h4 {
	font-weight: 400;
	font-family: Neucha, cursive;
	line-height: 1.2em;
}

h1 {
	font-size: 72px;
}

h2 {
	font-size: 60px;
}

h3 {
	font-size: 34px;
}

h4 {
	font-size: 24px;
}

.content {
	position: relative;
	width: 1110px;
	padding: 100px 0;
	margin: 0 auto;
}

.w-100 {
	width: 100%;
	height: 100%;
}

.bg-main {
	position: relative;
}

.bg-main::before {
	position: absolute;
	top: 0;
	left: 0;

	display: block;

	width: 100%;
	height: 100%;

	background-image: url("../assets/images/background.png");
	background-size: cover;
	background-repeat: no-repeat;

	opacity: 0.1;

	content: '';
}

.title {
	position: relative;
	width: 100%;
	margin: 0 0 185px;
	z-index: 2;
}

.img-main {
	position: absolute;
	top: 55px;
	right: -270px;
	height: 525px;
	display: block;
	margin: 0;
	padding: 0;
	z-index: 1;
}

.flex-box {
	display: flex;
	justify-content: space-between;
	position: relative;
	column-gap: 30px;
}

.flex-box-item {
	flex: 1 1 50%;
}

.btn-main {
	display: inline-block;

	padding: 12px 24px;
	margin-top: 40px;

	font: 700 16px/1.5 sans-serif;
	text-decoration: none;
	color: var(--white);
	background-color: var(--orange);
}

.p-0 {
	padding: 0;
}

.title-video-section {
	position: relative;
	top: 70px;
	z-index: 2;
	text-align: center;
}

.video {
	position: relative;
	top: 100px;
	z-index: 1;
	display: block;
	margin: 0 auto;
	filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
}

#navigation {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	column-gap: 30px;
	row-gap: 30px;
	padding-top: 200px;
}

.nav-item {
	display: block;
	flex: 1 1 25%;
	padding: 24px;
}

a.nav-item {
	color: var(--main-dark);
	text-decoration: none;
	background-color: var(--bright);
}

a.nav-item:hover {
	background: var(--orange);
}

a.nav-item:hover * {
	color: var(--white);
}

.nav-item h1 {
	font: 64px/1 Neucha, sans-serif;
	margin-bottom: 40px;
}

.nav-item h2 {
	margin: 0;
	font-size: 52px;
}

.content-img {
	vertical-align: middle;
}

.content-header {
	box-sizing: border-box;
	margin: 0;
}

.content-header::before {
	content: 'Когнитивные искажения';

	display: block;
	font: 24px/1.2 Neucha, cursive;
	color: var(--dark-op);
}

.content-header + p {
	font: 34px/1.2 Neucha, cursive;
}

.text-header {
	padding: 5px 0 5px 10px;
	margin: 100px 0 20px;

	font: 700 14px/1.2 OpenSans, sans-serif;
	text-transform: uppercase;
	color: var(--white);
	background-color: var(--brown);
}

.column-2 {
	column-count: 2;
	column-gap: 30px;
}

.column-2 p:nth-child(1) {
	margin-top: 0;
}

.bg-brown {
	background-color: var(--brown);
}

.bg-black {
	background-color: var(--main-dark);
}

.orange {
	color: var(--orange);
}

.white {
	color: var(--white);
}

.dark-theme {
	color: white;
}

.dark-theme .flex-box .flex-box-item .content-header::before {
	color: var(--white-op);
}

.dark-theme .text-header {
	color: var(--brown);
	background-color: var(--white);
}

